--- a/docs/.vitepress/theme/styles/vars.css
+++ b/docs/.vitepress/theme/styles/vars.css
@@ -3,12 +3,14 @@
  * -------------------------------------------------------------------------- */
 
 :root {
+  --c-yellow-lighter: #f7e596;
   --c-yellow-1: #ffd859;
   --c-yellow-2: #f7d336;
   --c-yellow-3: #dec96e;
   --c-yellow-soft-1: #ecb732;
   --c-yellow-soft-2: #c99513;
 
+  --c-teal-lighter: #a4d9d6;
   --c-teal: #086367;
   --c-teal-light: #33898d;
 
@@ -122,12 +124,23 @@ html.dark:root {
     var(--c-green-1) 50%,
     var(--c-green-2)
   );
+  --vp-home-hero-image-filter: blur(40px);
+}
+
+html:root {
+  --vp-home-hero-image-background-image: linear-gradient(
+    15deg,
+    var(--c-teal-lighter) 45%,
+    var(--c-yellow-lighter) 30%
+  );
+}
+
+html.dark:root {
   --vp-home-hero-image-background-image: linear-gradient(
     15deg,
     var(--c-teal-light) 65%,
     var(--c-yellow-1) 30%
   );
-  --vp-home-hero-image-filter: blur(40px);
 }
 
 .VPHero .VPImage.image-src {
