--- a/devtools/src/panel/styles.css
+++ b/devtools/src/panel/styles.css
@@ -362,6 +362,10 @@
   }
 }
 
+/* used by the button */
+@source inline('text-{xs,sm,md,lg}');
+@source inline('rounded-{xs,sm,md,lg}');
+
 /* For testing purposes */
 /* @source inline('bg-primary-{50,{100..900..100},950}'); */
 /* @source inline('bg-yellow-{50,{100..900..100},950}'); */
