--- a/devtools/src/panel/styles.css
+++ b/devtools/src/panel/styles.css
@@ -395,3 +395,9 @@
 /* @source inline('bg-red-{50,{100..900..100},950}'); */
 /* @source inline('bg-info-{50,{100..900..100},950}'); */
 /* @source inline('bg-neutral-{50,{100..900..100},950}'); */
+
+@property --progress-value {
+  syntax: '<integer>';
+  inherits: false;
+  initial-value: 0;
+}
