--- a/devtools/src/panel/styles.css
+++ b/devtools/src/panel/styles.css
@@ -397,7 +397,7 @@
 /* @source inline('bg-neutral-{50,{100..900..100},950}'); */
 
 @property --progress-value {
-  syntax: '<integer>';
+  syntax: '<number>';
   inherits: false;
   initial-value: 0;
 }
