--- a/docs/.vitepress/theme/styles/vars.css
+++ b/docs/.vitepress/theme/styles/vars.css
@@ -45,8 +45,7 @@
   --c-bg-accent: var(--c-white-dark);
   --code-bg-color: var(--c-white-dark);
   --code-inline-bg-color: var(--c-white-dark);
-  --code-font-family: 'dm', source-code-pro, Menlo, Monaco, Consolas,
-    'Courier New', monospace;
+  --code-font-family: 'dm', source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
   --code-font-size: 16px;
 
   --vp-code-block-bg: var(--vp-c-bg-alt);
@@ -119,11 +118,7 @@ html.dark:root {
 
 :root {
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: linear-gradient(
-    292deg,
-    var(--c-green-1) 50%,
-    var(--c-green-2)
-  );
+  --vp-home-hero-name-background: linear-gradient(292deg, var(--c-green-1) 50%, var(--c-green-2));
   --vp-home-hero-image-filter: blur(40px);
 }
 
@@ -210,4 +205,8 @@ kbd {
   border-radius: 6px;
   box-shadow: inset 0 -1px 0 var(--vp-c-bg-soft-mute);
   line-height: 0.95em;
+}
+
+llm-only {
+  display: none;
 }
